--- a/xc-ui-pc-static-portal/vuetest/vue_02.html
+++ b/xc-ui-pc-static-portal/vuetest/vue_02.html
@@ -7,12 +7,14 @@
 <body>
 <div id="app">
     <!--{{name}}-->
-    <span v-text="name"></span>
+    <a :href="url">
+        <span v-text="name"></span>
+    </a>
     <input type="text" v-model="num1"/> +
     <input type="text" v-model="num2"/> =
     <!--{{Number.parseInt(num1)+Number.parseInt(num2)}}-->
-    <span v-text="Number.parseInt(num1)+Number.parseInt(num2)"></span>
-    <input type="button" value="计算">
+    <span v-text="result"></span>
+    <button v-on:click="change">计算</button>
 </div>
 </body>
 <script src="vue.min.js"></script>
@@ -23,6 +25,14 @@
             name: '黑马程序员',
             num1: 1,
             num2: 1,
+            result: 0,
+            url: 'http://www.itcast.cn'
+        },
+        methods: {
+            change: function () {
+                this.result = Number.parseInt(this.num1) + Number.parseInt(this.num2);
+                alert('计算成功')
+            }
         }
     });
 </script>
