--- a/xc-ui-pc-static-portal/webpacktest01/vue_02.html
+++ b/xc-ui-pc-static-portal/webpacktest01/vue_02.html
@@ -17,23 +17,5 @@
     <button v-on:click="change">计算</button>
 </div>
 </body>
-<script src="vue.min.js"></script>
-<script>
-    var VM = new Vue({
-        el: '#app',
-        data: {
-            name: '黑马程序员',
-            num1: 1,
-            num2: 1,
-            result: 0,
-            url: 'http://www.itcast.cn'
-        },
-        methods: {
-            change: function () {
-                this.result = Number.parseInt(this.num1) + Number.parseInt(this.num2);
-                // alert('计算成功')
-            }
-        }
-    });
-</script>
+<script src="build.js"></script>
 </html>
